fix: Reputation.js toggle and focus on BasicInfo/BasicInfoV5/BasicInfoV5.js fix: phantom icon broken icons grade in BasicInfoV5/BasicInfoV5.js fix: BasicInfo/BasicInfoV5/BasicInfoV5.css background bottom alignment fix: null pointer return on getReputeGroupList on DBManager.js

--- a/src/UI/Components/BasicInfo/BasicInfoV5/BasicInfoV5.css
+++ b/src/UI/Components/BasicInfo/BasicInfoV5/BasicInfoV5.css
@@ -193,7 +193,9 @@
 	left: 0px;
 	top: 9px;
 	width: 220px;
-	height: 184px;
+	height: 132px;
+	background-repeat: no-repeat;
+	background-position: bottom; /* alinha o fundo pela base */
 }
 #BasicInfoV5 .bt_menu {
 	position: absolute;
@@ -203,7 +205,7 @@
 }
 #BasicInfoV5 .buttons:hover {
 }
-#BasicInfoV5 .buttons div {
+#BasicInfoV5 .buttons > div[id] {
 	float: left;
 	width: 32px;
 	height: 32px;
